# blas-interface

./: CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: build.yml
config/: CMakeLists.txt  install-mod.py  meson.build  template.cmake
config/cmake/: Findcustom-blas.cmake  Findcustom-lapack.cmake
src/: CMakeLists.txt  blas.f90  meson.build
src/blas/: CMakeLists.txt  all.f90  c1.f90  c2.f90  c3.f90  d1.f90  d2.f90  d3.f90  kinds.F90  kinds.f90  level1.f90  level2.f90  level3.f90  meson.build  s1.f90  s2.f90  s3.f90  utils.f90  z1.f90  z2.f90  z3.f90
src/blas/pure/: all.f90  c1.f90  c2.f90  c3.f90  d1.f90  d2.f90  d3.f90  level1.f90  level2.f90  level3.f90  s1.f90  s2.f90  s3.f90  z1.f90  z2.f90  z3.f90
